[package]
name = "jirard"
version = "0.1.0"
authors = ["Aaron Turkel <aarondovturkel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = "1.0.125"
serde_json = "1.0.64"
regex = "0.2"
dialoguer = "0.8.0"
structopt = "0.3.21"